# machine-learning-zoomcamp-homework

01-intro/: homework.ipynb
02-regression/: homework.ipynb
03-classification/: homework.ipynb
04-evaluation/: homework.ipynb
05-deployment/: Dockerfile  app.py  pyproject.toml  score_local.py  test_post.py
06-trees/: homework.ipynb
08-deep-learning/: homework.ipynb
midterm-project/: Dockerfile  README.md  app.py  midterm-project-planning.md  pyproject.toml  test_api.py
midterm-project/catboost_info/: catboost_training.json  test_error.tsv  time_left.tsv
midterm-project/catboost_info/learn/: events.out.tfevents
midterm-project/catboost_info/test/: events.out.tfevents
midterm-project/models/: dv_lr.pkl  model_cb.pkl  model_lr.pkl  scaler_lr.pkl
midterm-project/notebook/: data_analysis-and-modelling.ipynb
midterm-project/notebook/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
midterm-project/notebook/catboost_info/learn/: events.out.tfevents
midterm-project/notebook/catboost_info/test/: events.out.tfevents
midterm-project/scripts/: predict.py  train.py
