[project]
name = "midterm-project"
version = "0.1.0"
description = "Loan Approval"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.8",
    "fastapi>=0.121.2",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "requests>=2.32.5",
]
